--- a/Logarithms/Logarithms.tex
+++ b/Logarithms/Logarithms.tex
@@ -85,9 +85,7 @@ In mathematical notation,
 
 $\log_{10}(10^x) = x$
 
-For example,
-
-$\log_{10}(10^{-5}) = -5$ and $\log_{10}(10^7) = 7$
+For example, $\log_{10}(10^{-5}) = -5$ and $\log_{10}(10^7) = 7$
 
 (To take the base 10 logarithm of a number that is not exactly a power of $10$, use a calculator.)
 
@@ -128,7 +126,7 @@ Several identities follow as a result:
   \item What is $\log_{10}(0.000000001)$?
 
         \ifsolutions
-        \textbf{Answer}:
+        \textbf{Answer}: $\log_{10}(0.000000001)=\log_{10}(10^{-9})=-9$
         \else
         \vskip 24pt
         \fi
@@ -136,38 +134,34 @@ Several identities follow as a result:
   \item What is $\log_{10}(10,000)$?
 
         \ifsolutions
-        \textbf{Answer}:
+        \textbf{Answer}: $\log_{10}(10,000)=\log_{10}(10^{4})=4$
         \else
         \vskip 24pt
         \fi
 
-\end{enumerate}
+  \item $\log_{10}(10,000)+\log_{10}(0.000000001)=\log_{10}(x)$. Find $x$.
 
-\begin{enumerate}
+        \ifsolutions
+        \textbf{Answer}: $\log_{10}(10^{4}) + \log_{10}(10^{-9}) = \log_{10}(10^{4}\cdot 10^{-9}) = \log_{10}(10^{-5})\Rightarrow x = 10^{-9}$
+        \else
+        \vskip 24pt
+        \fi
 
-  \item[3.] What is $\log_{10}(10,000)+\log_{10}(0.000000001)$?
+  \item $\log_{10}(10,000)-\log_{10}(0.000000001)=\log_{10}(x)$. Find $x$.
 
-            \ifsolutions
-            \textbf{Answer}:
-            \else
-            \vskip 24pt
-            \fi
+        \ifsolutions
+        \textbf{Answer}: $\log_{10}(10^{4}) - \log_{10}(10^{-9}) = \log_{10}(10^{4}/10^{-9}) = \log_{10}(10^{13})\Rightarrow x = 10^{13}$
+        \else
+        \vskip 24pt
+        \fi
 
-  \item[4.] What is $\log_{10}(10,000)-\log_{10}(0.000000001)$?
+  \item If $x = x_o\log_{10}(y/y_o)$, solve for $y$.
 
-            \ifsolutions
-            \textbf{Answer}:
-            \else
-            \vskip 24pt
-            \fi
-
-  \item[5.] If $x = x_o\log_{10}(y/y_o)$, solve for $y$ in terms of $x$.
-
-            \ifsolutions
-            \textbf{Answer}:
-            \else
-            \vskip 24pt
-            \fi
+        \ifsolutions
+        \textbf{Answer}: $x/x_o = \log_{10}(y/y_o)$; $10^{x/x_o} = 10^{\log_{10}(y/y_o)}=y/y_o \Rightarrow y = y_o10^{x/x_o}$
+        \else
+        \vskip 24pt
+        \fi
 
 \end{enumerate}
 
@@ -179,15 +173,13 @@ The base $e$ logarithm reduces numbers raised by a power of $e$ to the power the
 
 ``$\ln$" represents the ``natural logarithm". The term ``natural" is used because the exponential $e$ appears in many natural problems, for example, some populations grow in proportion to $e^{t/\tau}$, where the constant $\tau$ is a growth rate.
 
-In mathematical notation,
-
-$\ln(e^x) = x$; for example $\ln(e^{-5}) = -5$ and $\ln(e^7) = 7$
+In mathematical notation, $\ln(e^x) = x$; for example $\ln(e^{-5}) = -5$ and $\ln(e^7) = 7$
 
 Several identities follow as a result:
 
 \begin{enumerate}
 
-  \item If you raise a base $e$ logged number by $e$, you get back the number that was logged.
+  \item If you raise a base-$e$ logged number by $e$, you get back the number that was logged.
 
         $e^{\ln(x)} = x$
 
@@ -208,7 +200,7 @@ Several identities follow as a result:
   \item What is $\ln(e^3)$?
 
         \ifsolutions
-        \textbf{Answer}:
+        \textbf{Answer}: $3$
         \else
         \vskip 24pt
         \fi
@@ -216,38 +208,34 @@ Several identities follow as a result:
   \item What is $\ln(1/e^3)$?
 
         \ifsolutions
-        \textbf{Answer}:
+        \textbf{Answer}: $-3$
         \else
         \vskip 24pt
         \fi
 
-  \item What is $\ln(e^{-4})+\ln(e^{3})$?
+  \item $\ln(e^{-4})+\ln(e^{3}) = \ln(x)$. Find $x$
 
         \ifsolutions
-        \textbf{Answer}:
+        \textbf{Answer}: $\ln(e^{-4})+\ln(e^{3})=\ln(e^{-4}\cdot e^{3})=\ln(e^{-1})=-1$
         \else
         \vskip 24pt
         \fi
 
-  \item What is $\ln(e^3)-\ln(e^{-2})$?
+  \item $\ln(e^{-4})-\ln(e^{3}) = \ln(x)$. Find $x$.
 
         \ifsolutions
-        \textbf{Answer}:
+        \textbf{Answer}: $\ln(e^{-4})-\ln(e^{3})=\ln(e^{-4}/e^{3})=\ln(e^{-7})=-7$
         \else
         \vskip 24pt
         \fi
 
-\end{enumerate}
+  \item If $x = x_o\ln(y/y_o)$, solve for $y$ in terms of $x$.
 
-\begin{enumerate}
-
-  \item[5.] If $x = x_o\ln(y/y_o)$, solve for $y$ in terms of $x$.
-
-            \ifsolutions
-            \textbf{Answer}:
-            \else
-            \vskip 24pt
-            \fi
+        \ifsolutions
+        \textbf{Answer}: $x/x_o = \ln(y/y_o)$; $e^{x/x_o} = e^{\ln(y/y_o)}=y/y_o \Rightarrow y = y_oe^{x/x_o}$
+        \else
+        \vskip 24pt
+        \fi
 
 \end{enumerate}
 
